edition = "2023";  // successor to proto2 and proto3

package sensor;

import "storage/deployment.proto";
import "google/protobuf/go_features.proto";

option go_package = "./internalapi/sensor;sensor";
option features.(pb.go).api_level = API_HYBRID;
option features.field_presence = IMPLICIT;
option features.enum_type = OPEN;
// `packed=false` needs to be transformed to field-level repeated_field_encoding
// features in Editions syntax
option features.json_format = ALLOW;
option features.utf8_validation = VERIFY;

message GetDeploymentForPodRequest {
  string pod_name = 1;
  string namespace = 2;
}

// A Sensor service that allows admission controller to retrieve deployments from Sensor.
service DeploymentService {
  rpc GetDeploymentForPod(GetDeploymentForPodRequest) returns (storage.Deployment);
}
